# Count_Primes

./: .gitignore  CMakeLists.txt  README.md
config/: config.yaml
src/: main.cpp  run_with_time_limit.cpp  run_with_time_limit.h
src/algos/: brute_force.cpp  optimized_brute_force.cpp  prime_algorithms.h
